<resources>
    <string name="app_name">Roberto Ruiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="regístrate">Regístrate</string>
    <string name="información_personal">Información personal</string>
    <string name="sexo">Sexo</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="edad">Edad</string>
    <string name="sex">Sexo</string>
    <string name="código_postal">Código postal</string>
    <string name="name">Name</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="logo">Logo</string>
    <string name="contraseña">Contraseña</string>
    <string name="ocupacion">Ocupación</string>
    <string name="nivel_educativo">Nivel educativo</string>
    <string name="registrarse">Registrarse</string>
    <string name="ocupaci_n">Ocupación</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_Completo">Nombre Completo</string>
    <string name="Age">Edad</string>
    <string name="nivel_Educativo">Nivel educativo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="sexospn">Sexo</string>
    <string name="nivel_EDucativo">Nivel educativo</string>
    <string name="registro">Registro</string>
    <string name="eDad">Edad</string>
    <string name="this_is_first_activity">This is first Activity</string>
    <string name="start_another_activity">Start Another Activity</string>
    <string name="nivel_EducAtivo">Nivel educativo</string>

    <string-array name = "generos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Prefiero no decir</item>


    </string-array>
    <string name="bienvenida">¡Bienvenido</string>
    <string name="nombreUsuario">Carlos!</string>
    <string name="misCursos">Mis Cursos</string>
    <string name="redesSociales">Nuestras redes sociales</string>
    <string name="contacto">Contacto</string>
    <string name="correo">robregon@gmail.com</string>
    <string name="telefono">4425014968</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al inicio de sesión</string>
    <string name="Lorem">Lorem ipsum dolor sit amet. Est quia consequatur ut culpa natus sed consequuntur veritatis et quia dolorem ea eaque tempore. In consequatur neque 33 saepe consequuntur ut nulla vitae ea magni nostrum ex incidunt aperiam non culpa exercitationem et quos commodi.</string>
    <string name="delete_dialog_title">Borrar Perfil</string>
    <string name="delete_dialog_message">\"¿Está seguro que desea borrar toda su información?\"</string>
    <string name="ok">Confirmar</string>
    <string name="cancel">Cancelar</string>

</resources>