<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambia tus datos"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextAge"
            android:hint="@string/eDad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextJob"
            android:hint="@string/ocupaci_n"
            android:inputType="textPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAge"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextPostalCode"
            android:hint="@string/código_postal"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextJob"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/spinnerSex"
            android:spinnerMode="dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPostalCode"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/spinnerEducation"
            android:spinnerMode="dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSex"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>


        <Button
            android:id="@+id/buttonCancel"
            android:text="Cancelar"
            android:backgroundTint="@color/secondaryText"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEducation"
            app:layout_constraintEnd_toStartOf="@id/buttonConfirm"
            android:layout_marginRight="20dp"
            android:padding="16dp"/>
        <Button
            android:id="@+id/buttonConfirm"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="Cambiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEducation"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="20dp"
            android:padding="16dp"/>
        <Button
            android:id="@+id/buttonDelete"
            android:backgroundTint="@color/primary"
            android:text="Borrar perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:padding="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
